index.tsx可以打包成 index.js 了

--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/slTrust/hjx-test-1/issues"
   },
-  "homepage": "https://github.com/slTrust/hjx-test-1#readme"
+  "homepage": "https://github.com/slTrust/hjx-test-1#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "5.2.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "typescript": "3.3"
+  },
+  "dependencies": {
+  }
 }
