webpack-dev-server 自动打包

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "homepage": "https://github.com/slTrust/hjx-test-1#readme",
   "devDependencies": {
     "awesome-typescript-loader": "5.2.1",
+    "typescript": "3.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "typescript": "3.3"
+    "webpack-dev-server": "3.2.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
