--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,8 @@
   },
   "homepage": "https://github.com/slTrust/hjx-test-1#readme",
   "devDependencies": {
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
     "awesome-typescript-loader": "5.2.1",
     "html-webpack-plugin": "3.2.0",
     "typescript": "3.3",
@@ -25,5 +29,8 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "3.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
+  }
 }
